--- a/src/stylesheets/CourseCardStyle.css
+++ b/src/stylesheets/CourseCardStyle.css
@@ -5,6 +5,7 @@
 .card:hover {
     box-shadow: 5px 7px 11px 1px grey !important;
     transition: 0.5s ease !important;
+    transform: scale(1.05);
 }
 
 .card-img-top {
