--- a/src/stylesheets/EditorToolbarStyle.css
+++ b/src/stylesheets/EditorToolbarStyle.css
@@ -1,9 +1,10 @@
 .editortoolbar {
-width: 35rem;
+width: 100%;
 background-color: black;
 position: fixed;
 bottom: 0px;
 height: 2.63rem;
+z-index: 100;
 }
 
 .runbtn {
