added responsiveness to all components

--- a/src/stylesheets/KitCardStyle.css
+++ b/src/stylesheets/KitCardStyle.css
@@ -1,11 +1,18 @@
 .kitcard {
-    width: 25rem;
+    width: 100%;
     padding: 1rem;
     cursor: pointer;
+    height: auto;
+    min-height: 6rem;
 }
 
 .kitcardcontainer:hover {
     transform: scale(1.01);
     transition: 0.5s ease;
     opacity: 0.9;
+    cursor: pointer;
+}
+
+.kitcardcontainer {
+    margin-bottom: 1rem;
 }
