--- a/src/stylesheets/OutputContainerStyle.css
+++ b/src/stylesheets/OutputContainerStyle.css
@@ -1,6 +1,6 @@
 .outputwindow {
     background-color: white;
-    width: 33.5%;
+    width: auto;
     position: fixed;
     right: 0px;
     top: 0px;
