--- a/src/stylesheets/QuestionContainerStyle.css
+++ b/src/stylesheets/QuestionContainerStyle.css
@@ -16,8 +16,8 @@
 }
 
 .sidebar-header {
-	position: relative;
-	padding: 10px;
+    position: relative;
+	padding-top: 10px;
     background-color: rgb(39, 38, 38);
     opacity: 0.9;
     z-index: 3;
